# uniswap-v4-core

./: .changelog  .gitignore  Cargo.toml  LICENSE  README.md  cliff.toml  foundry.toml  update-changelog.sh
contracts/core/: ERC6909.sol  ERC6909Claims.sol
contracts/core/test/: MockERC6909Claims.sol
docs/: components.html  flash_loan.md  index.html  scripts.js  styles.css
examples/: erc6909_example.rs  flash_loan_example.rs  protocol_fee_example.rs
licences/: BUSL_LICENSE
src/: lib.rs
src/bindings/: token.rs
src/core/: mod.rs  pool_manager.rs
src/core/flash_loan/: callback.rs  currency.rs  error.rs  examples.rs  lock.rs  mod.rs  types.rs
src/core/hooks/: examples.rs  hook_interface.rs  hook_registry.rs  mod.rs
src/core/math/: bit_math.rs  fixed_point96.rs  full_math.rs  liquidity_math.rs  mod.rs  sqrt_price_math.rs  swap_math.rs  tick_math.rs  types.rs
src/core/pool/: fees.rs  initialize.rs  liquidity.rs  management.rs  mod.rs  state.rs  swap.rs
src/core/state/: mod.rs  pool.rs  position.rs  tick.rs  types.rs
src/fees/: controller.rs  mod.rs  protocol_fee.rs  types.rs
src/hooks/: callback.rs  implementation.rs  mod.rs
src/tokens/: claims.rs  erc6909.rs  mod.rs
test/: ERC6909Claims.t.sol
tests/: flash_loan_test.rs  hooks_test.rs
tests/integration/: comprehensive_features_test.rs  uniswap_v4_features_test.rs
tests/unit/: dynamic_fee_hook_test.rs  erc6909_test.rs  hook_test.rs  protocol_fee_test.rs
