[package]
name = "uniswap-v4-core"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Rust implementation of Uniswap V4 Core"
license = "GPL-2.0-or-later"

[dependencies]
# Ethereum and Web3 related
ethers = { version = "2.0", features = ["full"] }
revm = "3.3"
primitive-types = "0.12"

# Numeric and mathematical computations
num-bigint = "0.4"
num-traits = "0.2"
fixed-point = "0.4"

# Async runtime
tokio = { version = "1.28", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and debugging
tracing = "0.1"
tracing-subscriber = "0.3"

# Testing
proptest = "1.2"
mockall = "0.11"

[dev-dependencies]
criterion = "0.5"
proptest = "1.2"
test-case = "3.1"

[build-dependencies]
ethers-contract = "2.0"
