[package]
name = "uniswap-v4-core"
version = "0.1.0"
edition = "2021"
authors = ["Uniswap Labs <labs@uniswap.org>"]
description = "Core contracts for the Uniswap v4 protocol"
license = "BUSL-1.1"
publish = false

[lib]
name = "uniswap_v4_core"
path = "src/lib.rs"

[[test]]
name = "uniswap_v4_features"
path = "tests/integration/uniswap_v4_features_test.rs"

[[test]]
name = "flash_loan"
path = "tests/flash_loan_test.rs"

[[test]]
name = "hook_test"
path = "tests/unit/hook_test.rs"

[[test]]
name = "protocol_fee_test"
path = "tests/unit/protocol_fee_test.rs"

[[test]]
name = "erc6909_test"
path = "tests/unit/erc6909_test.rs"

[dependencies]
# Ethereum and Web3 related
ethers = { version = "2.0", features = ["abigen", "ws", "rustls", "etherscan"] }
revm = "3.3"
primitive-types = "0.12.1"

# Numeric and mathematical computations
num-bigint = "0.4"
num-traits = "0.2"
fixed-point = "1.0"

# Async runtime
tokio = { version = "1.28", features = ["full"] }

# Error handling
thiserror = "1.0.48"
anyhow = "1.0"

# Serialization
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0"

# Logging and debugging
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
proptest = "1.2"
mockall = "0.11"

[dev-dependencies]
criterion = "0.5"
proptest = "1.2"
test-case = "3.1"

[build-dependencies]
ethers-contract = "2.0"
